# simple-html-page-test

./: README.md  index.html  pyproject.toml
simple_html_page/: README.md
src/: styles.css
tests/: test_html_requirements.py  test_validity.py
