[tool.poetry]
name = "simple-html-page"
version = "0.1.0"
description = ""
authors = ["Chris Winikka <3827026+HundredVisionsGuy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "simple_html_page"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
